# CMake-SDL2-Example

./: CMakeLists.txt  README.md
src/: main.cpp
